# NASA-data-analyst-llm

./: .replit  Pasted-An-error-occurred-while-processing-the-query-Invalid-property-specified-for-object-of-type-plotly-g-1727131425656.txt  README.md  main.py  pyproject.toml
static/css/: style.css
static/js/: script.js
templates/: index.html
utils/: __init__.py  data_processor.py  db_manager.py  llama_integration.py
