[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.3"
plotly = "^5.24.1"
groq = "^0.11.0"
llama-cpp-python = "^0.2.90"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
